// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Github \`triangle="hide"\` 1`] = `
<DocumentFragment>
  <div
    class="rc-github github-picker"
    style="width: 200px; background: rgb(255, 255, 255); border: 1px solid rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 3px 12px rgba(0,0,0,0.15); box-shadow: 0 3px 12px rgba(0,0,0,0.15); -webkit-border-radius: 4px; border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
  >
    <div
      style="position: absolute; border-width: 8px; border-style: solid; border-color: transparent transparent rgba(0, 0, 0, 0.15); border-image: none; display: none;"
    />
    <div
      style="position: absolute; border-width: 7px; border-style: solid; border-color: transparent transparent rgb(255, 255, 255); border-image: none; display: none;"
    />
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(184, 0, 0);"
          tabindex="0"
          title="#B80000"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(219, 62, 0);"
          tabindex="0"
          title="#DB3E00"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(252, 203, 0);"
          tabindex="0"
          title="#FCCB00"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 139, 2);"
          tabindex="0"
          title="#008B02"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 107, 118);"
          tabindex="0"
          title="#006B76"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(18, 115, 222);"
          tabindex="0"
          title="#1273DE"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 77, 207);"
          tabindex="0"
          title="#004DCF"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(83, 0, 235);"
          tabindex="0"
          title="#5300EB"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(235, 150, 148);"
          tabindex="0"
          title="#EB9694"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(250, 208, 195);"
          tabindex="0"
          title="#FAD0C3"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(254, 243, 189);"
          tabindex="0"
          title="#FEF3BD"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(193, 225, 197);"
          tabindex="0"
          title="#C1E1C5"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(190, 218, 220);"
          tabindex="0"
          title="#BEDADC"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(196, 222, 246);"
          tabindex="0"
          title="#C4DEF6"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(190, 211, 243);"
          tabindex="0"
          title="#BED3F3"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(212, 196, 251);"
          tabindex="0"
          title="#D4C4FB"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Github \`triangle="top-right"\` 1`] = `
<DocumentFragment>
  <div
    class="rc-github github-picker"
    style="width: 200px; background: rgb(255, 255, 255); border: 1px solid rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 3px 12px rgba(0,0,0,0.15); box-shadow: 0 3px 12px rgba(0,0,0,0.15); -webkit-border-radius: 4px; border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
  >
    <div
      style="position: absolute; border-width: 8px; border-style: solid; border-color: transparent transparent rgba(0, 0, 0, 0.15); border-image: none; top: -16px; right: 9px;"
    />
    <div
      style="position: absolute; border-width: 7px; border-style: solid; border-color: transparent transparent rgb(255, 255, 255); border-image: none; top: -14px; right: 10px;"
    />
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(184, 0, 0);"
          tabindex="0"
          title="#B80000"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(219, 62, 0);"
          tabindex="0"
          title="#DB3E00"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(252, 203, 0);"
          tabindex="0"
          title="#FCCB00"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 139, 2);"
          tabindex="0"
          title="#008B02"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 107, 118);"
          tabindex="0"
          title="#006B76"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(18, 115, 222);"
          tabindex="0"
          title="#1273DE"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 77, 207);"
          tabindex="0"
          title="#004DCF"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(83, 0, 235);"
          tabindex="0"
          title="#5300EB"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(235, 150, 148);"
          tabindex="0"
          title="#EB9694"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(250, 208, 195);"
          tabindex="0"
          title="#FAD0C3"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(254, 243, 189);"
          tabindex="0"
          title="#FEF3BD"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(193, 225, 197);"
          tabindex="0"
          title="#C1E1C5"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(190, 218, 220);"
          tabindex="0"
          title="#BEDADC"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(196, 222, 246);"
          tabindex="0"
          title="#C4DEF6"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(190, 211, 243);"
          tabindex="0"
          title="#BED3F3"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(212, 196, 251);"
          tabindex="0"
          title="#D4C4FB"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Github renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-github github-picker"
    style="width: 200px; background: rgb(255, 255, 255); border: 1px solid rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 3px 12px rgba(0,0,0,0.15); box-shadow: 0 3px 12px rgba(0,0,0,0.15); -webkit-border-radius: 4px; border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
  >
    <div
      style="position: absolute; border-width: 8px; border-style: solid; border-color: transparent transparent rgba(0, 0, 0, 0.15); border-image: none; top: -16px; left: 9px;"
    />
    <div
      style="position: absolute; border-width: 7px; border-style: solid; border-color: transparent transparent rgb(255, 255, 255); border-image: none; top: -14px; left: 10px;"
    />
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(184, 0, 0);"
          tabindex="0"
          title="#B80000"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(219, 62, 0);"
          tabindex="0"
          title="#DB3E00"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(252, 203, 0);"
          tabindex="0"
          title="#FCCB00"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 139, 2);"
          tabindex="0"
          title="#008B02"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 107, 118);"
          tabindex="0"
          title="#006B76"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(18, 115, 222);"
          tabindex="0"
          title="#1273DE"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 77, 207);"
          tabindex="0"
          title="#004DCF"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(83, 0, 235);"
          tabindex="0"
          title="#5300EB"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(235, 150, 148);"
          tabindex="0"
          title="#EB9694"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(250, 208, 195);"
          tabindex="0"
          title="#FAD0C3"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(254, 243, 189);"
          tabindex="0"
          title="#FEF3BD"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(193, 225, 197);"
          tabindex="0"
          title="#C1E1C5"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(190, 218, 220);"
          tabindex="0"
          title="#BEDADC"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(196, 222, 246);"
          tabindex="0"
          title="#C4DEF6"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(190, 211, 243);"
          tabindex="0"
          title="#BED3F3"
        />
      </span>
    </div>
    <div
      class="rc-github__swatch"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(212, 196, 251);"
          tabindex="0"
          title="#D4C4FB"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GithubSwatch renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-github__swatch"
  >
    <span>
      <div
        class="rc-swatch"
        style="background: rgb(51, 51, 51);"
        tabindex="0"
        title="#333"
      />
    </span>
  </div>
</DocumentFragment>
`;
